<resources>

    <string name="app_name">MoviesSeries</string>
    <string name="sign_in">Sign In</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="to_watch">To Watch</string>
    <string name="seen">Seen</string>
    <string name="series">Series</string>
    <string name="movies">Movies</string>
    <string name="movie">Movie</string>
    <string name="delete_movie">Are you sure you want to delete this movie?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="to_register">Register</string>
    <string name="register">Register</string>
    <string name="to_login">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>